# Axiom-platform

./: .gitignore  README.md  REVIEW.md  pyproject.toml
.agents/skills/: README.md
.github/workflows/: advisory-preflight.yml  python-ci.yml  windows-revit-validation.yml
contracts/: pipe_message_schema.json
scripts/: deploy-revit-2025.ps1  deploy-revit-2026.ps1  deploy-revit-2027.ps1  fetch_github_pr_metadata.py
src/axiom_cli/: main.py  (+2 more)
tests/: __init__.py  conftest.py  test_advisory_preflight.py  test_agents.py  test_artifact_paths.py  test_assertion_registry.py  test_atlas.py  test_automation_bridge.py  test_automation_planner.py  test_capability_chain.py  test_capability_confidence.py  test_capability_definition.py  test_capability_event_timeline.py  test_capability_execution_report.py  test_capability_failure.py  test_capability_file_knowledge.py  test_capability_history.py  test_capability_impact.py  test_capability_input.py  test_capability_knowledge_graph.py  test_capability_output.py  test_capability_planner.py  test_capability_registry.py  test_capability_relationship.py  test_capability_repair_outcome.py  test_capability_routing.py  test_capability_runner.py  test_capability_selection.py  test_capability_skill.py  test_capability_state_registry.py  test_capability_summary.py  test_capability_validation_knowledge.py  test_cli_validation_recorder.py  test_code_review_policy.py  test_code_validation.py  test_codebase_inventory.py  test_coding_session_orchestrator.py  test_coding_session_registry.py  test_command_registry.py  test_config_batch_execution.py  (+113 more)
(+440 files in other folders)
